--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                   <div class="rd-navbar-main-element">
                     <div class="rd-navbar-nav-wrap">
                       <ul class="rd-navbar-nav">
-                        <li class="rd-nav-item active"><a class="rd-nav-link" href="https://luoyunofficial.github.io/index">Home</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="https://luoyunofficial.github.io/services">Services</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="https://luoyunofficial.github.io/support">Support</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="https://luoyunofficial.github.io/search">Search</a></li>
+                        <li class="rd-nav-item active"><a class="rd-nav-link" href="/">Home</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="../services">Services</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="../support">Support</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="../search">Search</a></li>
                       </ul>
                     </div>
                   </div>
