--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     })(window, document, "clarity", "script", "iaei4yadqn");
     </script>
     <meta name="msvalidate.01" content="6FF4C21836697852E9A608FEB3030F9B" />
-    <title>LuoYun - From Here to the Universe</title>
-    <link rel="apple-touch-icon" href="https://luoyunofficial.github.io/images/logo.jpg" />
+    <title>IceTine - Official Website</title>
+    <link rel="apple-touch-icon" href="https://kasonlos.github.io/images/logo.jpg" />
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv='content-language' content='en'>
     <meta name="description" content="From here, to the universe. LuoYun has updated the website to the best experience." />
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
-    <link rel="icon" href="https://luoyunofficial.github.io/images/title.ico" type="image/x-icon">
+    <link rel="icon" href="https://kasonlos.github.io/images/title.ico" type="image/x-icon">
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Poppins:400,500,600%7CTeko:300,400,500%7CMaven+Pro:500">
     <link rel="stylesheet" href="https://luoyunofficial.github.io/css/bootstrap.css">
@@ -49,7 +49,7 @@
                     <!-- RD Navbar Toggle-->
                     <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                     <!-- RD Navbar Brand-->
-                    <div class="rd-navbar-brand"><a class="brand" href="https://luoyunofficial.github.io/index"><img src="https://luoyunofficial.github.io/images/logo-default-223x50.png" alt="" width="223" height="50"></a></div>
+                    <div class="rd-navbar-brand"><a class="brand" href="/"><img src="https://kasonlos.github.io/images/logo-default-223x50.png" alt="" width="223" height="50"></a></div>
                   </div>
                   <div class="rd-navbar-main-element">
                     <div class="rd-navbar-nav-wrap">
@@ -181,10 +181,10 @@
           <div class="container-fluid">
             <div class="footer-minimal-inset oh">
               <ul class="footer-list-category-2">
-                <li><a href="https://luoyunofficial.github.io/index">LuoYun</a></li>
-                <li><a href="https://luoyunofficial.github.io/privacy">Privacy Policy</a></li>
-                <li><a href="https://luoyunclouder.statuspage.io/">System Status</a></li>
-                <li><a href="https://luoyunofficial.github.io/ccr">Global</a></li>
+                <li><a href="https://kasonlos.github.io/index">IceTime</a></li>
+                <li><a href="https://kasonlos.github.io/privacy">Privacy Policy</a></li>
+                <li><a href="#">System Status</a></li>
+                <li><a href="https://kasonlos.github.io/ccr">Global</a></li>
               </ul>
             </div>
             <div class="footer-minimal-bottom-panel text-sm-left">
