--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     })(window, document, "clarity", "script", "iaei4yadqn");
     </script>
     <meta name="msvalidate.01" content="6FF4C21836697852E9A608FEB3030F9B" />
-    <title>IceTine - Official Website</title>
+    <title>IceTime - Official Website</title>
     <link rel="apple-touch-icon" href="https://kasonlos.github.io/images/logo.jpg" />
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv='content-language' content='en'>
-    <meta name="description" content="From here, to the universe. LuoYun has updated the website to the best experience." />
-    <meta name="keywords" content="LuoYun,luoyun,Luoyun,LuoYun Clouder,luoyunclouder,lyclouder" />
+    <meta name="description" content="IceTime is a interest club for everyone to show your trul self." />
+    <meta name="keywords" content="LuoYun,luoyun,Luoyun,LuoYun Clouder,luoyunclouder,lyclouder,icetime,IceTime" />
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -74,7 +74,7 @@
               <div class="swiper-slide-caption section-md">
                 <div class="container">
                   <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" style="color: white">LuoYun AITuber Program</h1>
-                  <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100" style="color: white">Show yourself, get more fans and popularity for you.</p><a class="button button-primary button-ujarak" href="services/aituber" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
+                  <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100" style="color: white">Show yourself, get more fans and popularity for you.</p><a class="button button-primary button-ujarak" href="https://luoyunofficial.github.io/services/aituber" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
                 </div>
               </div>
             </div>
