--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="msvalidate.01" content="6FF4C21836697852E9A608FEB3030F9B" />
     <title>IceTime - Official Website</title>
-    <link rel="apple-touch-icon" href="https://kasonlos.github.io/images/logo.jpg" />
+    <link rel="apple-touch-icon" href="https://kasonlos.github.io/images/logo.png" />
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv='content-language' content='en'>
     <meta name="description" content="IceTime is a interest club for everyone to show your trul self." />
