--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                     <div class="rd-navbar-nav-wrap">
                       <ul class="rd-navbar-nav">
                         <li class="rd-nav-item active"><a class="rd-nav-link" href="/">Home</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="../services">Services</a></li>
+                        <!--li class="rd-nav-item"><a class="rd-nav-link" href="../services">Services</a></li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="../support">Support</a></li>
-                        <li class="rd-nav-item"><a class="rd-nav-link" href="../search">Search</a></li>
+                        <li class="rd-nav-item"><a class="rd-nav-link" href="../search">Search</a></li-->
                       </ul>
                     </div>
                   </div>
@@ -74,24 +74,16 @@
             <div class="swiper-slide" data-slide-bg="#">
               <div class="swiper-slide-caption section-md">
                 <div class="container">
-                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">LuoYun Website Design</h1>
-                  <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">We need your ideas! You can do your best on it.</p><a class="button button-primary button-ujarak" href="services/website" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
+                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">Welcome to IceTime!</h1>
+                  <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">IceTime is a interest club for everyone to show your trul self.</p><a class="button button-primary button-ujarak" href="../aboutus" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
                 </div>
               </div>
             </div>
-            <div class="swiper-slide" data-slide-bg="images/slider-1-slide-6-1770x742.png">
+            <!--div class="swiper-slide" data-slide-bg="images/slider-1-slide-6-1770x742.png">
               <div class="swiper-slide-caption section-md">
                 <div class="container">
                   <h1 data-caption-animate="fadeInLeft" data-caption-delay="0" style="color: white">LuoYun Interest Club</h1>
                   <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100" style="color: white">Explore your interest and make it possible with LuoYun Interest Club.</p><a class="button button-primary button-ujarak" href="services/club" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
-                </div>
-              </div>
-            </div>
-	    <!--div class="swiper-slide" data-slide-bg="#">
-              <div class="swiper-slide-caption section-md">
-                <div class="container">
-                  <h1 data-caption-animate="fadeInLeft" data-caption-delay="0">LuoYun Video (Beta)</h1>
-                  <p class="text-width-large" data-caption-animate="fadeInRight" data-caption-delay="100">Watch various videos and movies on LuoYun Video. We're developing it for the best experience.</p><a class="button button-primary button-ujarak" href="services/video" data-toggle="modal" data-caption-animate="fadeInUp" data-caption-delay="200">Learn more</a>
                 </div>
               </div>
 	    </div-->
@@ -174,10 +166,10 @@
           <div class="container-fluid">
             <div class="footer-minimal-inset oh">
               <ul class="footer-list-category-2">
-                <li><a href="https://kasonlos.github.io/index">IceTime</a></li>
-                <li><a href="https://kasonlos.github.io/privacy">Privacy Policy</a></li>
-                <li><a href="#">System Status</a></li>
-                <li><a href="https://kasonlos.github.io/ccr">Global</a></li>
+                <li><a href="/">IceTime</a></li>
+                <!--li><a href="https://kasonlos.github.io/privacy">Privacy Policy</a></li-->
+                <li><a href="https://luoyunofficial.gtihub.io/">LuoYun</a></li>
+                <li><a href="../ccr">Global</a></li>
               </ul>
             </div>
             <div class="footer-minimal-bottom-panel text-sm-left">
