--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
               <ul class="footer-list-category-2">
                 <li><a href="/">IceTime</a></li>
                 <!--li><a href="https://kasonlos.github.io/privacy">Privacy Policy</a></li-->
-                <li><a href="https://luoyunofficial.gtihub.io/">LuoYun</a></li>
+                <li><a href="https://luoyunofficial.github.io/">LuoYun</a></li>
                 <li><a href="../ccr">Global</a></li>
               </ul>
             </div>
